web/homepage.css
img {
	max-width: 120px;
}

div {
	text-align: center;
}

h1 {
	margin: 0px;
	padding: 0px;
}

h2 {
	text-decoration: underline;
}

.flex-row {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-around;
}

.flex-column {
	display: flex;
	flex-flow: column wrap;
	justify-content: space-around;
}

body {
	border: 0px;
	margin: 0px;
    padding: 0px;
	background-color: #3C4F76;
	color: #DDDBF1;
}


header {
	margin: 0px;
	padding: 0px;
	text-align: center;
	background-color: #DDDBF1;
	color: #383F51;
}

.headerLink {
	text-decoration: none;
}

.headerLink:visited {
	color: blue;
}

a {
	margin: 8px 24px;
	font-size: 18px;
}

a:visited {
	color: #D1BEB0;
}

a:hover {
	color: green;
}

p {
	font-size: 18px;
}

.text {
	border-radius: 5px;
	background-color: #DDDBF1;
	color: #3C4F76;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
 
 
  position: absolute;
  z-index: 1;
  bottom: 100%;
  left: 50%;
}


.tooltip:hover .tooltiptext {
  visibility: visible;
}

.tooltip .tooltiptext::after {
  content: " ";
  position: absolute;
  top: 100%; 
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

